--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 
 <!-- Import fonts (Creepster for horror, Comfortaa for body text, Amatic for footer) -->
-<link href="https://fonts.googleapis.com/css2?family=Creepster&family=Comfortaa:wght@400;700&family=Amatic+SC&display=swap" rel="stylesheet"/>
+<link href="https://fonts.googleapis.com/css2?family=Creepster&family=Comfortaa:wght@400;700&family=Pacifico&family=Amatic+SC&display=swap" rel="stylesheet"/>
 
 <title>POPHEADSCIRCLEJERK.COM</title>
 <link rel="shortcut icon" href="{Favicon}">
@@ -123,7 +123,7 @@ document.addEventListener('DOMContentLoaded', () => {
     <!-- Fun, horror-style white title with gray background -->
     <h1>POPHEADSCIRCLEJERK.COM</h1>
 
-    <!-- Official Subreddit Link -->
+    <!-- Official Subreddit Link with cursive font -->
     <div class="subreddit-link">
         <a href="https://reddit.com/r/popheadscirclejerk" target="_blank">Official Subreddit</a>
     </div>
